Risoluzione bug Rimozione scrollbar Piccole modifiche estetiche

--- a/styles/interaction_bar_style.css
+++ b/styles/interaction_bar_style.css
@@ -16,11 +16,11 @@
 /* Dropdown Button */
 .dropbtn {
     background-color: white;
-    padding: 16px;
+    padding: 12px;
     font-size: 16px;
     border: 2px solid black;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 50px;
 
   }
   
@@ -45,12 +45,18 @@
     border-radius: 10px;
     min-width: 150px;
     z-index: 1;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 0px 10px 0px;
     height: 300%;
     overflow: auto;
+    overflow-y: scroll;
     justify-content: start;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
   
+  .dropdown-content::-webkit-scrollbar {
+    display: none;
+  }
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;}
   
